@startuml BHBq_Diagram

skinparam defaultFontName Arial
skinparam linetype ortho
skinparam linewidth 2
skinparam roundcorner 15

' Classe représentant un article qui apparaitra comme une ligne sur le devis
class Article #lightblue {
  + Id: int [PK]
  + IdLot: int [FK]
  + Nom: string
  + Unite: string
  + PrixH: double
  + PrixM: double
  + PrixB: double
  + Calcul: string

  + Article()
}

' Classe représentant un client du Groupe BHB
class Client #lightyellow {
  + Id: int [PK]
  + Nom: string
  + Adresse: string
  + Particulier: bool
  + Siret: string?
  + TvaIntracom: string?

  + Client()
}

' Classe représentant une entreprise du groupe BHB
class Entreprise #lightgreen {
  + Id: int [PK]
  + Nom: string
  + Adresse: string
  + Siret: string
  + TvaIntracom: string
  + Logo: string?

  + Entreprise()
}

' Classe représentant un lot (ensemble d'articles)
class Lot #orange {

  + Id: int [PK]
  + IdEntreprise: int? [FK]
  + Designation: string
  + CoefPose: double?

  + Lot()
}

' Classe représentant un projet, qui regroupe les informations relatives à un projet
class Projet #lightpink {
  + Id: int [PK]
  + IdClient: int [FK]
  + Description: string
  + SiteConstruction: string
  + DateDebut: DateTime
  + DateFin: DateTime

  + Projet()
}

' Classe représentant l'ensemble des paramètres modélisation une ou plusieurs constructions
class Param #lightgrey {
  + Id: int [PK]
  + IdProjet: int [FK]
  + Nom: string
  + Valeur: int

  + Param()
}

' Classe représentant un document type Facture, Devis, Acompte, Avenant, etc.
class Document #lightcyan {

  + Id: int [PK]
  + IdProjet: int [FK]
  + IdEntreprise: int [FK]
  + IdTVA: int [FK]
  + IdGammeAcompte: int [FK]
  + Facture: bool
  + NumDocument: string
  + NumOrigin: string
  + NumAcompte: int
  + DateEmission: DateTime


  + Document()
}

class TVA #LightSalmon {
  + Id: int [PK]
  + Code : string
  + Taux: double

  + TVA()
}

class GammeAcompte #LightGoldenRodYellow {
  + Id: int [PK]
  + Pourcentage1: double
  + Pourcentage2: double
  + Pourcentage3: double
  + Pourcentage4: double
  + Pourcentage5: double

  + GammeAcompte()
}

class CompteBancaire #LightSkyBlue {
  + Id: int [PK]
  + IdEntreprise: int [FK]
  + Adresse: string
  + IBAN: string
  + BIC: string
  + NumCompte: string
  + NomBanque: string

  + CompteBancaire()
}

' Relations entre les classes
Projet "*" -- "1" Client
Projet "1" *- "*" Document
Projet "1" *- "1" Param
Entreprise *- Lot
Lot *- Article
Document "*" -- "1" Entreprise
Document *- TVA
Document *- GammeAcompte
Entreprise "1" -- "*" CompteBancaire

@enduml